Only run "Dockerfile"

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches:
       - main
-    tags:
-      - v*
+    paths:
+      - '!ledfx*/**'
+      - '!*-*'
+      - '!*.*'
 
 jobs:
   ledfx:
