--- a/.github/workflows/docker-stages.yml
+++ b/.github/workflows/docker-stages.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build ${{ IMAGE_NAME }}
+      - name: Build $IMAGE_NAME
         run: |
           docker build --file Dockerfile-2stage-1 --tag ledfx-2stage .
           
@@ -31,7 +31,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build ${{ IMAGE_NAME }}
+      - name: Build $IMAGE_NAME
         run: |
           docker build --file Dockerfile-4stage --tag ledfx-4stage .
           
@@ -43,7 +43,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build ${{ IMAGE_NAME }}
+      - name: Build $IMAGE_NAME
         run: |
           docker build --file Dockerfile.venv --tag ledfx-venv .
           
@@ -56,7 +56,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build ${{ IMAGE_NAME }}
+      - name: Build $IMAGE_NAME
         run: |
           docker build --file Dockerfile.compile --tag ledfx-compile .
   
@@ -69,6 +69,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build ${{ IMAGE_NAME }}
+      - name: Build $IMAGE_NAME
         run: |
           docker build --file Dockerfile.build --tag ledfx-build .
