Update multistage build

--- a/.github/workflows/docker-stages.yml
+++ b/.github/workflows/docker-stages.yml
@@ -35,9 +35,10 @@ jobs:
         run: |
           docker build --file Dockerfile-4stage --tag ledfx-4stage .
           
-  ledfx-venv:
+          
+  ledfx-multistage:
     env:
-      IMAGE_NAME: ledfx-venv
+      IMAGE_NAME: ledfx-multistage
     name: Build LedFx-venv on ubuntu-latest
     runs-on: ubuntu-latest
 
@@ -46,57 +47,71 @@ jobs:
       - name: Build ${{ env.IMAGE_NAME }}
         run: |
           docker build --file Dockerfile.venv --tag ledfx-venv .
-          ls -lahF
-      - name: Upload ledfx-venv to /
-        uses: actions/upload-artifact@v2
-        with:
-          name: ledfx-venv
-          path: .
-          
-  ledfx-compile:
-    needs: ledfx-venv  
-    env:
-      IMAGE_NAME: ledfx-compile
-    name: Build LedFx-compile on ubuntu-latest
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download ledfx-venv
-        uses: actions/download-artifact@v2
-        with:
-          name: ledfx-venv
-      - uses: actions/checkout@v2
-      - name: Build ${{ env.IMAGE_NAME }}
-        run: |
           docker build --file Dockerfile.compile --tag ledfx-compile .
-      - name: Upload ledfx-venv to /
-        uses: actions/upload-artifact@v2
-        with:
-          name: ledfx-venv
-          path: .
-      - name: Upload ledfx-compile to /
-        uses: actions/upload-artifact@v2
-        with:
-          name: ledfx-compile
-          path: .
-  
-  ledfx-build:
-    needs: [ledfx-venv, ledfx-compile]  
-    env:
-      IMAGE_NAME: ledfx-build
-    name: Build LedFx-build on ubuntu-latest
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download ledfx-venv
-        uses: actions/download-artifact@v2
-        with:
-          name: ledfx-venv
-      - name: Download ledfx-compile
-        uses: actions/download-artifact@v2
-        with:
-          name: ledfx-compile
-      - uses: actions/checkout@v2
-      - name: Build ${{ env.IMAGE_NAME }}
-        run: |
           docker build --file Dockerfile.build --tag ledfx-build .
+
+#   ledfx-venv:
+#     env:
+#       IMAGE_NAME: ledfx-venv
+#     name: Build LedFx-venv on ubuntu-latest
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Build ${{ env.IMAGE_NAME }}
+#         run: |
+#           docker build --file Dockerfile.venv --tag ledfx-venv .
+#           ls -lahF
+#       - name: Upload ledfx-venv to /
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: ledfx-venv
+#           path: .
+          
+#   ledfx-compile:
+#     needs: ledfx-venv  
+#     env:
+#       IMAGE_NAME: ledfx-compile
+#     name: Build LedFx-compile on ubuntu-latest
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Download ledfx-venv
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: ledfx-venv
+#       - uses: actions/checkout@v2
+#       - name: Build ${{ env.IMAGE_NAME }}
+#         run: |
+#           docker build --file Dockerfile.compile --tag ledfx-compile .
+#       - name: Upload ledfx-venv to /
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: ledfx-venv
+#           path: .
+#       - name: Upload ledfx-compile to /
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: ledfx-compile
+#           path: .
+  
+#   ledfx-build:
+#     needs: [ledfx-venv, ledfx-compile]  
+#     env:
+#       IMAGE_NAME: ledfx-build
+#     name: Build LedFx-build on ubuntu-latest
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Download ledfx-venv
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: ledfx-venv
+#       - name: Download ledfx-compile
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: ledfx-compile
+#       - uses: actions/checkout@v2
+#       - name: Build ${{ env.IMAGE_NAME }}
+#         run: |
+#           docker build --file Dockerfile.build --tag ledfx-build .
