Change armv7 dockerfile to multistage

--- a/Dockerfile-armv7
+++ b/Dockerfile-armv7
@@ -1,47 +1,49 @@
+
+##################################################
 # Create docker image from arm32v7/python:3.9-slim
 # This image serves as the base compile image
+#
 FROM arm32v7/python:3.9-slim AS compile-image
-ARG LEDFX_PYPI
-
 # Create python venv and add it to PATH
 RUN python -m venv /ledfx/venv
 ENV PATH="/ledfx/venv/bin:$PATH"
-
 # Install dependencies and ledfx, remove uneeded packages
+RUN pip install Cython
 RUN apt-get update && apt-get install -y --no-install-recommends \
-        build-essential \
+        # build-essential \
         # libc-dev \
-        # gcc \
+        gcc \
     && apt-get install -y \
         # alsa-utils \
         # libasound2 \
         # libasound2-plugins \
         libatlas3-base \
         portaudio19-dev \
-        python3-dev
         # pulseaudio \
+        python3-dev
+
+
+FROM compile-image AS venv-image
+ARG LEDFX_PYPI
 RUN pip install $LEDFX_PYPI
+
 
 # Create arm32v7/python:3.9-slim image
 # This image copies from compile image for a smaller final image
 FROM arm32v7/python:3.9-slim AS build-image
-COPY --from=compile-image /ledfx/venv /ledfx/venv
+COPY --from=venv-image /ledfx/venv /ledfx/venv
 ENV PATH="/ledfx/venv/bin:$PATH"
-
 WORKDIR /ledfx
-
 # Install system dependencies for ledfx
 RUN apt-get update && apt-get install -y --no-install-recommends \
         libatlas3-base \
         portaudio19-dev \
         && rm -rf /var/lib/apt/lists/*
-
 # Add user `ledfx` and create home folder
 RUN useradd --create-home ledfx
 # Set the working directory in the container
 WORKDIR /home/ledfx
 USER ledfx
-
 # Expose port 8888 for web server and 5353 for mDNS discovery
 EXPOSE 8888/tcp
 EXPOSE 5353/udp
