upgrade pip, wheel, setuptools for armv7

--- a/Dockerfile-armv7
+++ b/Dockerfile-armv7
@@ -25,6 +25,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 FROM compile-image AS venv-image
 ARG LEDFX_PYPI
+RUN pip install --upgrade pip wheel setuptools
 RUN pip install $LEDFX_PYPI
 
 
