add alsa-utils to armv7

--- a/Dockerfile-armv7
+++ b/Dockerfile-armv7
@@ -40,6 +40,7 @@ ENV PATH="/ledfx/venv/bin:$PATH"
 WORKDIR /ledfx
 # Install system dependencies for ledfx
 RUN apt-get update && apt-get install -y --no-install-recommends \
+        alsa-utils \
         libatlas3-base \
         portaudio19-dev \
         && rm -rf /var/lib/apt/lists/*
